--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,7 +24,7 @@
 
         "baseUrl": "./src",
         "paths": {
-            "~/*": ["./*"]
+            "~styles/*": ["./styles/*"]
         }
     },
     "include": ["src"]
