--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@tailwindcss/vite": "^4.0.0",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "tailwindcss": "^4.0.0"
     },
     "devDependencies": {
         "@biomejs/biome": "^1.9.4",
