--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,7 +24,12 @@
 
         "baseUrl": "./src",
         "paths": {
-            "~styles/*": ["./styles/*"]
+            "~components": ["./components"],
+            "~hooks": ["./hooks"],
+            "~store": ["./store"],
+            "~styles/*": ["./styles/*"],
+            "~types": ["./types"],
+            "~utils": ["./utils"]
         }
     },
     "include": ["src"]
