--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,6 +24,7 @@
 
         "baseUrl": "./src",
         "paths": {
+            "~assets/*": ["./assets/*"],
             "~components": ["./components"],
             "~hooks": ["./hooks"],
             "~store": ["./store"],
