--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@phosphor-icons/react": "^2.1.7",
         "@reduxjs/toolkit": "^2.5.1",
         "@tailwindcss/vite": "^4.0.0",
         "react": "^18.3.1",
