--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.10.0",
         "@phosphor-icons/react": "^2.1.7",
         "@reduxjs/toolkit": "^2.5.1",
         "@tailwindcss/vite": "^4.0.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.54.2",
         "react-redux": "^9.2.0",
         "redux": "^5.0.1",
-        "tailwindcss": "^4.0.0"
+        "tailwindcss": "^4.0.0",
+        "yup": "^1.6.1"
     },
     "devDependencies": {
         "@biomejs/biome": "^1.9.4",
